# fray

./: .gitignore  README.md
cmake/: CMakeLists.txt  openexr.cmake  sdl.cmake  zlib.cmake
data/: boxed.fray  cornell_box.fray  forest.fray  smallpt.fray  zaphod.fray
data/cornell/: Readme.md
data/env/forest/: negx.exr  negy.exr  negz.exr  posx.exr  posy.exr  posz.exr
data/hw10/: bokeh.fray
data/hw12/: sphtri.fray
data/hw9/: axe_test.fray  dragon.fray  nonconvex.fray
projfiles/: CodeBlocks-linux.cbp  CodeBlocks-win.cbp  fray.vcxproj  fray.vcxproj.filters
scripts/: SETUP_dev_win.sh  download_cmake_win.sh  openexr_win.sh  openexr_win_cb.sh  sdl_win.sh  sdl_win_cb.sh  setup_cmake_win.sh  zlib_win.sh
src/: bbox.h  bitmap.cpp  bitmap.h  camera.cpp  camera.h  color.h  constants.h  cxxptl-sdl.cpp  cxxptl-sdl.h  environment.cpp  environment.h  geometry.cpp  geometry.h  heightfield.cpp  heightfield.h  lights.cpp  lights.h  main.cpp  main.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  random_generator.cpp  random_generator.h  scene.cpp  scene.h  sdl.cpp  sdl.h  shading.cpp  shading.h  triangle.cpp  triangle.h  util.cpp  util.h  vector.h
templates/: cpp  h
